--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,11 @@
 /*  your css code here. If applicable */
+td ,th{
+	border:1px solid #ccc;
+	border-radius:5px;
+}
+tr:nth-child(odd) {
+      background-color: #f2f2f2;
+    }
+tr:nth-child(even) {
+      background-color: #ffffff;
+    }
